--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 	display: flex;
 	justify-content: space-between;
 }
-.flexwrap{
+.holder{
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
@@ -21,4 +21,7 @@
 }
 .blue{
 	background-color: blue;
+}
+.item{
+
 }
